Remove --enable-preview arguments and set JDK version to 22