@@ -10,7 +10,3 @@ dependencies {
     implementation 'com.squareup:javapoet:1.13.0'
     implementation 'org.jetbrains:annotations:24.1.0'
 }
-
-tasks.named('compileJava') {
-    options.compilerArgs += '--enable-preview'
-}
